# documentation

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  tiktokVURSywE3x9Vf00qWkURw50UY6ZuCkovw.txt
.github/: build_mkdocs_website.yml
.github/workflows/: build_mkdocs_website.yml  writerside-docs-deploy.yml
Writerside/: fmd.tree
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Templates.md  about_us.md  index.md
about_us/: index.html
community/code_of_conduct/: index.html
community/privacy_policy/: index.html
contributing/: index.html
contributing/bug_report/: index.html
contributing/feature_request/: index.html
contributing/python_code_style_guide/: index.html
docs/: Introduction to FreeMoCap -  A Free Open Source Markerless Motion Capture System.md  about_us.md  frequently_asked_questions_faq.md  glossary.md  how_to_guides.md  index.md  privacy_policy.md  requirements.txt  roadmap.md  troubleshooting.md  tutorials.md
docs/Community Guidelines/: Code of Conduct.md
docs/Contributing guide/: Bug Report.md  Contributing to the FreeMoCap Project.md  Feature Request.md  Python Code Style Guide.md  index.md.md
docs/Explanations/: Accuracy.md  Calibration_algorithm.md  Center_of_mass.md  (+5 more)
getting_started/: index.html
includes/: abbreviations.md
resources/: index.html
search/: search_index.json
site/: 404.html  index.html
stylesheets/: extra.css
utilities/: quine.py
works_in_progress/: 2023-04-14 - Index.md  To Do - FreeMoCap - 2023-04-14.md  frequently_asked_questions_faq.md
(+141 files in other folders)
