[tool.poetry]
name = "documentation"
version = "0.1.0"
description = "Documentation for the FreeMoCap Software"
authors = ["Skelly FreeMoCap <info@freemocap.org>"]
license = "AGPLv3"
readme = "README.md"

# [tool.poetry.dependencies]
# python = "^3.11"
# mkdocs-material = "^9.4.2"
# mkdocs-video = "^1.5.0"

# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

